hphp/test/slow/memoize/refreturn.php.expectf

Fatal error: <<__Memoize>> cannot be used on functions that return by reference in %s/test/slow/memoize/refreturn.php on line 4
